# awesome_pcl_industrial

./: readme.md
doc/: cmake.md
src/03-icp/: CMakeLists.txt  main.cpp  readme.md
src/03-icp/data/: readme.md
src/Lesson1/: CMakeLists.txt  main.cpp
src/Lesson2/cloud_viewer/: cloud_viewer.cpp
src/Lesson2/pcl_icp/: main.cpp
src/Lesson2/region_growing_segmentation/: CMakeLists.txt  region_growing_segmentation.cpp
src/Lesson3/change/1 range_image_creation/: range_image_creation.cpp
src/Lesson5/: README.md
src/Lesson5/eigen-features/: CMakeLists.txt  eigen_feature_example.cpp
